# MiniMind

./: .gitignore  README.md  pyproject.toml
method/: rmsnorm.py
model/: model.py
trainer/: train_dpo.py  train_grpo.py  train_ppo.py
