[project]
name = "minimind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.0",
    "pandas>=2.3.3",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
 [tool.setuptools]
packages = ["model", "dataset", "trainer"]  # 列出所有顶级包名uv
